# ACW23Compilers

./: .gitignore  CMakeLists.txt  CST8152_Compilers_A11_Arrow.docx  Compilers.c  Compilers.h  MainReader.c  README.MD  README.txt  Reader.c  Reader.h  Scanner.c  Scanner.h  TT.xlsx
A11/: CST8152_Compilers_A11_AnswerTemplate.docx  CST8152_Compilers_A11_Arrow.docx
A12/: CMakeLists.txt  Compilers.c  Compilers.h  Reader.c  Reader.h
A12/input/: A12.bat  INPUT0_Empty-A12.out  INPUT1_Hello-A12.out  INPUT1_Hello.aro  INPUT2_Volume-A12.out  INPUT2_Volume.aro  INPUT3_Factorial-A12.out  INPUT3_Factorial.aro  INPUT4_Datatypes-A12.out  INPUT4_Datatypes.aro  INPUT5_General-A12.out  INPUT5_General.aro  INPUT9_Big-A12-a-100-10.out  INPUT9_Big-A12-f-100-10.err  INPUT9_Big-A12-f-100-10.out  INPUT9_Big-A12-m-100-10.out
A21/: CST8152_Compilers_W23-A21-Arrow_Model.doc
A31/: A31_W23_Arrow_Template BACKUP.doc  CST8152_Compilers_A11_Arrow.docx  Isaac_Proulx_A31_W23_Arrow_Template.doc  README.txt
ArrowCompiler/: CMakeLists.txt  Compilers.c  Compilers.h  MainParser.c  MainScanner.c  Parser.c  Parser.h  Reader.c  Scanner.h
ArrowCompiler/input/: A22.bat  A32.bat  INPUT0_Empty-A12.out  INPUT0_Empty-A32.out  INPUT10_Sin-A22.out  INPUT10_Sin-A32.out  INPUT10_Sin.aro  INPUT1_Hello-A12.out  INPUT1_Hello-A22.out  INPUT1_Hello-A32.out  INPUT1_Hello.aro  INPUT2_Volume-A22.out  INPUT2_Volume-A32.out  INPUT3_Factorial-A22.out  INPUT3_Factorial-A32.out  INPUT4_Datatypes-A12.out  INPUT4_Datatypes-A22.out  INPUT4_Datatypes-A32.out  INPUT5_General-A22.out  INPUT5_General-A32.out  INPUT9_Big-A12-a-100-10.out
CompilerA22/input/: A22.bat  INPUT2_Volume.jul  INPUT3_Factorial.jul  INPUT4_Datatypes.jul  INPUT5_General.jul  INPUT9_Big.jul
input/: A12.bat  A22.bat  INPUT0_Empty-A12.out  INPUT10_Sin-A22.out  INPUT10_Sin.aro  INPUT1_Hello-A12.out  INPUT1_Hello-A22.out  INPUT2_Volume-A12.out  INPUT2_Volume-A22.out  INPUT3_Factorial-A12.out  INPUT3_Factorial-A22.out  INPUT3_Factorial.aro  INPUT4_Datatypes-A12.out  INPUT4_Datatypes-A22.out  INPUT5_General-A12.out  INPUT5_General-A22.out  INPUT5_General.aro  INPUT9_Big-A12-a-100-10.out  INPUT9_Big-A12-f-100-10.out  INPUT9_Big-A12-m-100-10.out  INPUT9_Big.aro
